# github_telegram_bot_starter

./: README.md
github_telegram_bot_starter/: pyproject.toml  readme.txt  requirements.txt  run_telegram_news_bot.bat
github_telegram_bot_starter/src/telegram_news_bot/: __init__.py  automation.py  config.py  content_enricher.py  instance_lock.py  llm.py  logging_utils.py  main.py  models.py  pipeline.py  source_collector.py  storage.py  telegram_client.py  text_utils.py
