[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-news-bot-starter"
version = "0.1.0"
description = "Starter template for a self-hosted Telegram bot with pluggable news sources and Telegram-based control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "feedparser==6.0.11",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
]

[project.scripts]
telegram-news-bot = "telegram_news_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
